# HomeWork12

./: .coverage  .env  .gitignore  README.md  config.ini  main.py  pyproject.toml  test.db
docs/: .buildinfo  index.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/source/: conf.py
migrations/: env.py
migrations/versions/: 2a15fb85b89e_add_confirm_email.py  79dce6ea03b7_add_create_apdate_fields_3.py  861e402bc178_add_user.py  a9c693001552_init.py
postgres-data/: postmaster.pid
postgres-data/base/13458/: 1247  1249  1259  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py  upload_avatar.py
tests/: conftest.py  test.db  test_main.py  test_repository_contact.py  test_repository_user.py  test_routes_auth.py  test_routes_contacts.py  test_services_email.py  test_services_upload_avatar.py
