[tool.poetry]
name = "homework11-1"
version = "0.1.0"
description = ""
authors = ["gorandalex <andrii.gorobets@gmail.com>"]
readme = "README.md"
packages = [{include = "homework11_1"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
docker = "^6.0.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
libgravatar = "^1.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
python-mail = "^1.0.2"
fastapi-mail = "^1.2.8"
fastapi-limiter = "^0.1.5"
redis = "^4.5.5"
starlette = "^0.27.0"
cloudinary = "^1.33.0"
pytest-mock = "^3.10.0"
asyncio = "^3.4.3"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.1"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"


[tool.poetry.group.test.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
